--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 						<p></p>
 					</div>
 				 </div></a>
-				<a href="training">
+				<a href="#training">
 				<div class="experience-item">
 					<div class="experience-circle" >
 						<i class="icon-book-open"></i> 
@@ -535,7 +535,7 @@ for intrested internships.
             
             <div class="row">
 			<div  class="col-md-4 col-sm-4">
-			<a href="https://saumya-chauhan.github.io/matching-game.github.io/">
+			<a href="https://saumya-chauhan.github.io/matching-game.github.io/" target="_blank">
                     <img src="images/matching-game/image001.png" class="img-responsive" alt=""></a>
                         </div>
 			<div class="col-md-1"></div>
