--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                             <tr>
 								<td>Resume</td>
 								<td style="background-color: #f7639a;">
-								 <a href="Saumya-Resume.pdf" download="Saumya Resume" target="_blank" data-toggle="tooltip" data-placement="top" title="Check Out My Resume">Resume.pdf</a></td>
+								 <a href="Saumya-Resume.pdf" download="Saumya Resume" target="_blank" data-toggle="tooltip" data-placement="top" title="Check Out My Resume">
+									 <font color="black">Resume.pdf</font></a></td>
 							</tr>
 						</table>
 					  </div>
