--- a/index.html
+++ b/index.html
@@ -267,11 +267,14 @@
               
               <div class="col-md-8">
                <div class="about-me-text margin-top-50">
-               <p>My name is Saumya Singh Chauhan, currently pursuaing btech from knit sultanpur.<br> I am very flexible with technology and very encusitive by nature. 
-			   I take kneen intrest in exploring new concepts relatecd to technology.<br>
-			   I had worked as a web developer and made few websites using php, bootstrap, javascript, html, css.<br>
-			   I took lot intrest in networking and did  CCNA course to know more about networking. I did simulation projects on packet tacer where I applied many protocols in WAN and LAN network.<br>
-			   I did data analytcs in R and machine learning course and made few projects related to it. I made digit classifier and optical character reader program on octave</p>
+               <p>My name is Saumya Singh Chauhan, currently pursuaing btech from knit sultanpur.<br> I am very inquisitive by nature. I take keen interest in exploring new concept related to new technology. 
+I did data analysis and statistical computing course from rcpl. There I had thoroughly explored and done practical on different data mining techniques like associations, correlations, inferences, clustering, graph analysis, etc. Tried different data mining techniques like joins, aggregations, regressions, graph analysis etc on different datasets.
+I had done machine learning course from coursera. During the course I did some projects as weekly assignments like image classifier and optical character reader. I had applied many of machine learning algorithms like SVM, KNN, back propagation etc on different datasets.
+I had worked as a web developer and designed few of websites using html, css, bootstarp, JS as frontend languages and php and mysql in backend.
+		       I have all my codes of those websites on my github account.
+		       In languages I have strong grip on C and C++. I did lots of programming in these languages. 
+		       I have good knowledge of networking, operating system, data structures and algorithms. I have done few courses to train myself on them. <br> Being an extrovert people love working with me. I can multitask and can effectively communicate well with all concepts.
+</p>
                </div>
               </div>
                
