--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                  
                  <div class="col-md-5 col-sm-6">
                     <div class="me-image">
-                      <img src="images/bg/profile.jpg" alt="">
+                      <img src="images/bg/profile.JPG" alt="">
                   </div>
                 </div>
               </div>
