--- a/internship.html
+++ b/internship.html
@@ -349,7 +349,7 @@ The network broadcasts public addresses, which are derived from hashing a public
        </div>
         
         <div class="text-center margin-top-50">
-          <a class="button button-style button-style-dark button-style-color-2 smoth-scroll" href="#contact">Hire Me!</a>
+          <a class="button button-style button-style-dark button-style-color-2 smoth-scroll" href="#contact">Contact Me!</a>
           </div>
      
     </section>
